# litrank_webtechws24

./: CNAME  category.html  contact.html  impressum.html  index.html  product.html  requirements.txt  style.css
backend/: pyproject.toml
backend/data/: mock.csv
backend/src/: crud.py  database.py  main.py  mock.py  models.py  schemas.py
backend/src/app.egg-info/: PKG-INFO  SOURCES.txt  requirements.txt  top_level.txt
frontend/: book.html  book.js  contact.html  impressum.html  index.html  map.html  script.js  search.html  search.js
frontend/css/: style.css
github/workflows/: build.yml
