[project]
name = "app"
version = "0.1.0"
description = "Backend for litRank book ranking application"

dependencies = [
    "fastapi>=0.78.0",
    "uvicorn>=0.17.6",
    "sqlalchemy==2.0.37",
    "python-jose==3.3.0",
    "python-multipart>=0.0.5",
    "psycopg2-binary>=2.9.3",
    "pydantic>=1.9.0",
    "fastapi-middleware>=0.1.3",
    "passlib>=1.7.4"
]
